# sentry-cli

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: error.rs  main.rs
src/api/: client.rs  mod.rs
src/api/models/: common.rs  issue.rs  mod.rs
src/cli/: args.rs
src/cli/commands/: config.rs  mod.rs
src/cli/commands/issues/: assign.rs  delete.rs  ignore.rs  list.rs  merge.rs  mod.rs  resolve.rs  view.rs
src/config/: loader.rs  mod.rs
src/output/: json.rs  mod.rs  table.rs
tests/: cli_tests.rs
