[package]
name = "sentry-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for managing Sentry issues"
license = "MIT"
repository = "https://github.com/d6e/sentry-cli"
readme = "README.md"
keywords = ["sentry", "cli", "issues", "error-tracking"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
comfy-table = "7"
colored = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
